lazy loaded component added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-first-a></app-first-a>
 <app-first-b></app-first-b>
-<app-first-app></app-first-app>
+<!--<app-first-app></app-first-app>-->
+<router-outlet></router-outlet>
